# symmetri

./: .cargo-config.toml.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  METRICS_ANALYSIS.md  README.md  REVIEW_SUMMARY.md  config.toml  flake.nix  pyproject.toml
.github/workflows/: ci.yml
.opencode/plans/: maintenance-plan.md
battery_monitor/: __init__.py  aggregate.py  cli.py  collector.py  db.py  graph.py  sparkline.py  sysfs.py  timeframe.py
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: main.rs
src/: aggregate.rs  cli.rs  cli_helpers.rs  collector.rs  db.rs  graph.rs  lib.rs  main.rs  metrics.rs  sysfs.rs  timeframe.rs  units.rs
systemd/: battery-monitor.service  battery-monitor.timer
tests/: cli_tests.rs  test_aggregate.py  test_cli.py  test_db.py  test_sysfs.py  test_timeframe.py
