[package]
name = "battery-monitor"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Battery monitoring tools for Linux/NixOS"
repository = ""

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = ">=7.1, <7.2"
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "chrono", "line_series", "ttf"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
