[package]
name = "symmetri"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "System metrics collection (battery, CPU, GPU, network, RAM, disks, thermals) for Linux/NixOS"
repository = ""

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = ">=7.1, <7.2"
dirs = "5.0"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "chrono", "line_series", "ttf"] }
ordered-float = "4.5"
rusqlite = { version = "0.31" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"  # Faster linking on Linux

# Optimize dependencies at level 2, not our code
[profile.dev.package."*"]
opt-level = 2
debug = false
