[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "battery-monitor"
version = "0.1.0"
description = "Battery monitoring tools for Linux/NixOS"
authors = [{ name = "Battery Monitor", email = "noreply@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9",
  "rich>=13",
  "matplotlib>=3.8",
]

[project.scripts]
battery-monitor = "battery_monitor.cli:main"
battery-monitor-collect = "battery_monitor.cli:main_collect"
battery-monitor-report = "battery_monitor.cli:main_report"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["battery_monitor"]

[tool.typer.export]
app = "battery_monitor.cli:app"
name = "battery-monitor"

[tool.pytest.ini_options]
pythonpath = ["."]
